--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trem",
-  "version": "6.0.179",
+  "version": "6.0.180",
   "description": "Taiwan Real-time Earthquake Monitoring ( 臺灣即時地震監測 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -69,7 +69,7 @@
   "keywords": [],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "electron": "24.3.0",
+    "electron": "^25.2.0",
     "electron-builder": "^24.3.0",
     "eslint": "^8.40.0"
   },
