--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trem",
-  "version": "6.0.181",
+  "version": "6.0.182",
   "description": "Taiwan Real-time Earthquake Monitoring ( 臺灣即時地震監測 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -75,6 +75,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.9",
+    "@helia/unixfs": "^1.4.0",
     "@material/material-color-utilities": "^0.2.0",
     "@turf/circle": "^6.5.0",
     "axios": "^1.0.0",
@@ -87,14 +88,18 @@
     "electron-log": "5.0.0-beta.16",
     "electron-updater": "^5.3.0",
     "expose-gc": "^1.0.0",
+    "helia": "^1.3.8",
     "jquery": "3.6.4",
     "leaflet": "^1.9.3",
     "leaflet-edgebuffer": "^1.0.6",
     "leaflet-geojson-vt": "^1.1.0",
     "maplibre-gl": "^2.4.0",
     "node-fetch": "^2.6.7",
+    "protobufjs": "^7.2.4",
+    "semver": "^7.5.4",
     "speak-tts": "^2.0.8",
     "tinycolor2": "1.6.0",
+    "tough-cookie": "^4.1.3",
     "ws": "8.13.0"
   }
 }
