--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trem",
-  "version": "6.0.187",
+  "version": "6.0.188",
   "description": "Taiwan Real-time Earthquake Monitoring ( 臺灣即時地震監測 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -69,32 +69,31 @@
   "keywords": [],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "electron": "^25.3.1",
-    "electron-builder": "^24.4.0",
-    "eslint": "^8.45.0"
+    "electron": "^25.3.2",
+    "electron-builder": "^24.6.3",
+    "eslint": "^8.46.0"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.9",
+    "@electron/remote": "^2.0.10",
     "@helia/unixfs": "^1.4.0",
     "@material/material-color-utilities": "^0.2.0",
     "@turf/circle": "^6.5.0",
     "axios": "^1.0.0",
     "bytenode": "^1.5.0",
     "chokidar": "^3.5.3",
-    "discord.js": "14.8.0",
-    "echarts": "^5.4.1",
-    "electron-common-ipc": "^16.0.1-dev.17",
+    "discord.js": "14.12.1",
+    "echarts": "^5.4.3",
+    "electron-common-ipc": "^16.0.4",
     "electron-fcm-push-receiver": "^2.1.7",
     "electron-log": "5.0.0-beta.16",
-    "electron-updater": "^5.3.0",
+    "electron-updater": "^6.1.1",
     "expose-gc": "^1.0.0",
-    "helia": "^1.3.8",
-    "jquery": "3.6.4",
-    "leaflet": "^1.9.3",
+    "helia": "^1.3.9",
+    "jquery": "3.7.0",
+    "leaflet": "^1.9.4",
     "leaflet-edgebuffer": "^1.0.6",
     "leaflet-geojson-vt": "^1.1.0",
-    "maplibre-gl": "^2.4.0",
-    "node-fetch": "^2.6.7",
+    "maplibre-gl": "^3.2.1",
     "protobufjs": "^7.2.4",
     "semver": "^7.5.4",
     "speak-tts": "^2.0.8",
