--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tremv",
-  "version": "6.1.60",
+  "version": "6.1.61",
   "description": "Taiwan Real-time Earthquake Monitoring Variety ( 臺灣即時地震監測變體 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -69,23 +69,23 @@
   "keywords": [],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "electron": "^27.0.2",
-    "electron-builder": "^24.6.4",
-    "eslint": "^8.52.0"
+    "electron": "^27.1.2",
+    "electron-builder": "^24.9.1",
+    "eslint": "^8.54.0"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.12",
+    "@electron/remote": "^2.1.0",
     "@material/material-color-utilities": "^0.2.0",
     "@turf/circle": "^6.5.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "bytenode": "^1.5.3",
     "chokidar": "^3.5.3",
-    "discord.js": "14.13.0",
+    "discord.js": "14.14.1",
     "echarts": "^5.4.3",
     "electron-common-ipc": "^16.0.4",
     "electron-fcm-push-receiver": "^2.1.7",
-    "electron-log": "5.0.0-beta.28",
-    "electron-updater": "^6.1.4",
+    "electron-log": "5.0.1",
+    "electron-updater": "^6.1.7",
     "expose-gc": "^1.0.0",
     "jquery": "3.7.1",
     "leaflet": "^1.9.4",
