--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tremv",
-  "version": "6.1.70",
+  "version": "6.1.71",
   "description": "Taiwan Real-time Earthquake Monitoring Variety ( 臺灣即時地震監測變體 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -90,11 +90,11 @@
     "jquery": "3.7.1",
     "leaflet": "^1.9.4",
     "leaflet-edgebuffer": "^1.0.6",
-    "leaflet-geojson-vt": "^1.1.0",
+    "leaflet-geojson-vt": "github:ExpTechTW/leaflet-geojson-vt",
     "protobufjs": "^7.2.5",
     "speak-tts": "^2.0.8",
     "tinycolor2": "1.6.0",
     "tough-cookie": "^4.1.3",
-    "ws": "^8.15.1"
+    "ws": "^8.16.0"
   }
 }
