--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tremv",
-  "version": "6.1.75",
+  "version": "6.1.76",
   "description": "Taiwan Real-time Earthquake Monitoring Variety ( 臺灣即時地震監測變體 )",
   "main": "main.js",
   "homepage": "https://exptech.com.tw/",
@@ -87,6 +87,37 @@
     "electron-log": "5.0.1",
     "electron-updater": "^6.1.7",
     "expose-gc": "^1.0.0",
+    "jquery": "3.7.1",
+    "leaflet": "^1.9.4",
+    "leaflet-edgebuffer": "^1.0.6",
+    "leaflet-geojson-vt": "github:ExpTechTW/leaflet-geojson-vt",
+    "protobufjs": "^7.2.5",
+    "speak-tts": "^2.0.8",
+    "tinycolor2": "1.6.0",
+    "tough-cookie": "^4.1.3",
+    "ws": "^8.16.0"
+  },
+  "dependenciesoff": {
+    "@electron/remote": "^2.0.12",
+    "@helia/unixfs": "^3.0.0",
+    "@libp2p/autonat": "^1.0.10",
+    "@libp2p/circuit-relay-v2": "^1.0.13",
+    "@libp2p/dcutr": "^1.0.10",
+    "@libp2p/identify": "^1.0.12",
+    "@libp2p/kad-dht": "^12.0.5",
+    "@material/material-color-utilities": "^0.2.0",
+    "@turf/circle": "^6.5.0",
+    "axios": "^1.6.4",
+    "bytenode": "^1.5.3",
+    "chokidar": "^3.5.3",
+    "discord.js": "14.14.1",
+    "echarts": "^5.4.3",
+    "electron-common-ipc": "^16.0.4",
+    "electron-fcm-push-receiver": "^2.1.7",
+    "electron-log": "5.0.1",
+    "electron-updater": "^6.1.7",
+    "expose-gc": "^1.0.0",
+    "helia": "^4.0.0",
     "jquery": "3.7.1",
     "leaflet": "^1.9.4",
     "leaflet-edgebuffer": "^1.0.6",
