--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -73,7 +73,7 @@
         }
       ],
       "category": "Development",
-      "maintainer": "ExpTechTW",
+      "maintainer": "ExpTechTW"
     },
     "directories": {
       "buildResources": "resources",
