--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -114,6 +114,7 @@
     "speak-tts": "^2.0.8",
     "tinycolor2": "1.6.0",
     "tough-cookie": "^4.1.3",
+    "undici": "^5.28.4",
     "ws": "^8.16.0"
   },
   "dependenciesoff": {
