--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -78,13 +78,39 @@ jobs:
     - name: Lint
       run: npm run lint
     - name: Build
-      run: npm run dist
+      run: npm run dist_x64
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
     - name: Upload Artifact
       uses: actions/upload-artifact@master
       with:
         name: "TREM.macOS_x64.dmg"
+        path: |
+          /Users/runner/work/TREM/TREM/TREM.Electron/dev/*.dmg
+          /Users/runner/work/TREM/TREM/TREM.Electron/dev/*.pkg
+  macOS_arm64:
+    runs-on: macos-14
+    defaults:
+      run:
+        working-directory: TREM.Electron
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Restore dependencies
+      run: npm i
+    - name: Lint
+      run: npm run lint
+    - name: Build
+      run: npm run dist_arm64
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Upload Artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: "TREM.macOS_arm64.dmg"
         path: |
           /Users/runner/work/TREM/TREM/TREM.Electron/dev/*.dmg
           /Users/runner/work/TREM/TREM/TREM.Electron/dev/*.pkg
