--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -9,6 +9,8 @@
     "start": "electron .",
     "dev": "electron . --dev --key",
     "dist": "electron-builder -p always",
+    "dist_x64": "electron-builder --x64 -p always",
+    "dist_arm64": "electron-builder --arm64 -p always",
     "lint": "eslint --ext .js js/"
   },
   "build": {
