--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -84,7 +84,7 @@
   "keywords": [],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "electron": "^31.0.1",
+    "electron": "^31.2.1",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.0"
   },
@@ -100,7 +100,7 @@
     "electron-common-ipc": "^16.0.4",
     "electron-fcm-push-receiver": "^2.1.7",
     "electron-log": "5.1.1",
-    "electron-updater": "^6.2.1",
+    "electron-updater": "6.3.0-alpha.6",
     "expose-gc": "^1.0.0",
     "jquery": "3.7.1",
     "jszip": "^3.10.1",
@@ -112,7 +112,7 @@
     "tinycolor2": "1.6.0",
     "tough-cookie": "^4.1.3",
     "undici": "5.28.4",
-    "ws": "^8.17.0"
+    "ws": "^8.18.0"
   },
   "dependenciesoff": {
     "@electron/remote": "^2.0.12",
