--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "" # See documentation for possible values
-    directory: "/TREM.Electron" # Location of package manifests
+    directory: "/TREM.Electron/" # Location of package manifests
     schedule:
       interval: "weekly"
