--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -91,8 +91,8 @@
   "dependencies": {
     "@electron/remote": "^2.0.12",
     "@material/material-color-utilities": "^0.2.0",
-    "@turf/circle": "6.5.0",
-    "axios": "^1.7.2",
+    "@turf/circle": "^7.0.0",
+    "axios": "1.6.7",
     "bytenode": "^1.5.6",
     "chokidar": "^3.5.3",
     "discord.js": "14.14.1",
