@material/material-color-utilities

--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -90,6 +90,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.12",
+    "@material/material-color-utilities": "^0.2.0",
     "@turf/circle": "^7.1.0",
     "axios": "1.6.8",
     "bytenode": "^1.5.6",
