--- a/TREM.Electron/package.json
+++ b/TREM.Electron/package.json
@@ -66,6 +66,7 @@
           ]
         }
       ],
+      "icon": "TREM.icns",
       "category": "Development",
       "maintainer": "ExpTechTW"
     },
